# idle_game_experiment

./: Cargo.toml
src/: main.rs  tilemap_demo
src/idle_game/: constants.rs  mod.rs
src/idle_game/components/: mod.rs  particle.rs  simple_velocity.rs
src/idle_game/systems/: mod.rs  velocity_systems.rs
