[package]
name = "idle_game"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1
debug = false

[dependencies]
bevy = "0.13.2"
#bevy_ecs_tilemap = {git = "https://github.com/StarArawn/bevy_ecs_tilemap"}
bevy_voxel_world = "0.6.0"
image = "0.25.1"
rand = "0.8.5"
bevy-inspector-egui = "0.24.0"